--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="#">Hire Me</a>
             </div>
             <div class="home-image">
-               <img src="images/BG.png" alt="Kolla Dhanaraj">
+               <img src="images/BG.png?v=2" alt="Kolla Dhanaraj">
             </div>
         </div>
     </section>
